# simple-ai-provenance

./: .env.example  .gitignore  AUTOMATIC_WORKFLOW.md  CLAUDE.md  DEMO_PROVENANCE.md  Dockerfile  README.md  USAGE_GUIDE.md  claude-code-integration.md  claude-code-mcp-config.json  comprehensive_session.txt  deploy.sh  docker-compose.yml  init-db.sql  pyproject.toml  run_mcp_server.py  simple-provenance-mcp-config.json  start-auto-interception.sh  start_simple_provenance.py  test-mcp-integration.md  test_conversation_extraction.py  test_file.py  test_kg_detection.py  test_manual_tracking.py  test_mcp_tools.py  test_real_conversations.txt
.claude/: settings.local.json
src/mcp_ai_commit/: __init__.py  ai_client.py  auto_bridge.py  cli.py  config.py  database.py  git_hooks.py  git_operations.py  interceptor.py  model_detection.py  models.py  server.py  start_auto_interception.py  validator.py
src/simple_provenance_tracker/: __init__.py  claude_code_conversation_capture.py  cli.py  config.py  database.py  git_hooks.py  git_hooks_helper.py  hook_post_tool.py  hook_record_prompt.py  install.py  jsonl_parser.py  kg_watcher.py  mcp_server.py  mcp_tools.py
