[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-ai-provenance"
version = "3.0.0"
description = "Track AI prompts per session and annotate git commits with provenance"
authors = [
    {name = "Bharath Devanathan"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["mcp", "ai", "provenance", "claude", "git"]
dependencies = [
    "mcp>=1.0.0"
]

[project.scripts]
# MCP server — used by Claude Desktop / Claude Code MCP config
simple-ai-provenance = "simple_provenance_tracker.mcp_server:run"
# One-command installer
provenance-setup      = "simple_provenance_tracker.install:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
