[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-ai-provenance"
version = "3.0.0"
description = "Track AI prompts per session and annotate git commits with provenance"
authors = [
    {name = "Bharath Devanathan"}
]
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
keywords = ["mcp", "ai", "provenance", "claude", "git"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/beedev/simple-ai-provenance"
Repository = "https://github.com/beedev/simple-ai-provenance"
Issues = "https://github.com/beedev/simple-ai-provenance/issues"

[project.scripts]
simple-ai-provenance = "simple_provenance_tracker.mcp_server:run"
provenance-setup      = "simple_provenance_tracker.install:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
